istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-service
  namespace: demo
spec:
  hosts:
    - discovery-api-preprod.wynk.in
  gateways:
    - discovery-gateway
  http:
    - headers:
        set:
          X-Forwarded-Prefix: /demo-service
      match:
        - uri:
            prefix: /demo-service
      rewrite:
        uri: /
      route:
        - destination:
            host: demo-service.demo.svc.cluster.local
            port:
              number: 8080
